--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </td>
       </tr>
     </table>
-    <h1 style="text-align: center">soupkitchen</h1>
+    <h1 style="text-align: center">Navigate the Coom</h1>
     <div id="bowl">
       <h3 style="text-align: center">
         <a
