add message and update title

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CHECKER (Update: 16 May, 1st Revision)</title>
+  </head>
 
   <body>
-    <table width="100%" style="background-color: white">
-      <tr>
-        <td style="text-align: center; font-size: 14px">
-          Please keep in mind that your logs may be saved.
-        </td>
-      </tr>
-    </table>
     <h1 style="text-align: center">Navigate the Coom</h1>
+    <h5 style="text-align: center">Not all reverse proxies on this page are trustworthy,<br />especially those with modified code from <a href="https://gitgud.io/ApplePencilUser/oai-reverse-proxy" target="_blank">the original one</a>,<br />so use them with a clear understanding of the risks and the fact that they may be logged.</h5><br />
     <div id="bowl">
       <h3 style="text-align: center">
         <a
