--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHECKER (Update: 16 May, 1st Revision)</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CHECKER (Update: 16 May, 2nd Revision)</title>
   </head>
 
   <body>
     <h1 style="text-align: center">Navigate the Coom</h1>
-    <h5 style="text-align: center">Not all reverse proxies on this page are trustworthy,<br />especially those with modified code from <a href="https://gitgud.io/ApplePencilUser/oai-reverse-proxy" target="_blank">the original one</a>,<br />so use them with a clear understanding of the risks and the fact that they may be logged.</h5><br />
+    <h5 style="text-align: center">
+      Not all reverse proxies on this page are trustworthy,<br />especially
+      those with modified code from
+      <a
+        href="https://gitgud.io/ApplePencilUser/oai-reverse-proxy"
+        target="_blank"
+        >the original one</a
+      >,<br />so use them with a clear understanding of the risks and the fact
+      that they may be logged.
+    </h5>
+    <br />
     <div id="bowl">
       <h3 style="text-align: center">
         <a
@@ -27,13 +37,28 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
+          href="https://oai-proxy-787r.onrender.com/?__theme=light"
           target="_blank"
-          >2. Oai Proxyy - a Hugging Face Space by testingcodehere</a
+          >2. Lazy - a Hugging Face Space by Lazy</a
         >
       </h3>
       <iframe
         id="iframe2"
+        src="https://oai-proxy-787r.onrender.com/?__theme=light"
+        width="100%"
+        height="500"
+        allow="encrypted-media"
+        sandbox
+      ></iframe>
+      <h3 style="text-align: center">
+        <a
+          href="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
+          target="_blank"
+          >3. Oai Proxyy - a Hugging Face Space by testingcodehere</a
+        >
+      </h3>
+      <iframe
+        id="iframe3"
         src="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -44,11 +69,11 @@
         <a
           href="https://bogguiri-waifuplss.hf.space/?__theme=light"
           target="_blank"
-          >3. Waifuplss - a Hugging Face Space by Bogguiri</a
+          >4. Waifuplss - a Hugging Face Space by Bogguiri</a
         >
       </h3>
       <iframe
-        id="iframe3"
+        id="iframe4"
         src="https://bogguiri-waifuplss.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -59,11 +84,11 @@
         <a
           href="https://xavitaws-whatever.hf.space/?__theme=light"
           target="_blank"
-          >4. Whatever - a Hugging Face Space by xavitaws</a
+          >5. Whatever - a Hugging Face Space by xavitaws</a
         >
       </h3>
       <iframe
-        id="iframe4"
+        id="iframe5"
         src="https://xavitaws-whatever.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -74,11 +99,11 @@
         <a
           href="https://nocars123-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >5. Nocars - a Hugging Face Space by Nocars123</a
+          >6. Nocars - a Hugging Face Space by Nocars123</a
         >
       </h3>
       <iframe
-        id="iframe5"
+        id="iframe6"
         src="https://nocars123-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -89,11 +114,11 @@
         <a
           href="https://bogguiri-waifuplss4.hf.space/?__theme=light"
           target="_blank"
-          >6. Waifuplss - a Hugging Face Space by Bogguiri</a
+          >7. Waifuplss - a Hugging Face Space by Bogguiri</a
         >
       </h3>
       <iframe
-        id="iframe6"
+        id="iframe7"
         src="https://bogguiri-waifuplss4.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -104,11 +129,11 @@
         <a
           href="https://maribabababa-3-5ai.hf.space/?__theme=light"
           target="_blank"
-          >7. 3.5ai - a Hugging Face Space by maribabababa</a
+          >8. 3.5ai - a Hugging Face Space by maribabababa</a
         >
       </h3>
       <iframe
-        id="iframe7"
+        id="iframe8"
         src="https://maribabababa-3-5ai.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -117,11 +142,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://orangezulu-rp.hf.space/?__theme=light" target="_blank"
-          >8. rp - a Hugging Face Space by orangezulu</a
+          >9. rp - a Hugging Face Space by orangezulu</a
         >
       </h3>
       <iframe
-        id="iframe8"
+        id="iframe9"
         src="https://orangezulu-rp.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -130,11 +155,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://yukianon-turbo.hf.space/?__theme=light" target="_blank"
-          >9. Alien Research - a Hugging Face Space by yukianon</a
+          >10. Alien Research - a Hugging Face Space by yukianon</a
         >
       </h3>
       <iframe
-        id="iframe9"
+        id="iframe10"
         src="https://yukianon-turbo.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -145,11 +170,11 @@
         <a
           href="https://bogguiri-waifuplsstest.hf.space/?__theme=light"
           target="_blank"
-          >10. Waifuplss - a Hugging Face Space by Bogguiri</a
+          >11. Waifuplss - a Hugging Face Space by Bogguiri</a
         >
       </h3>
       <iframe
-        id="iframe10"
+        id="iframe11"
         src="https://bogguiri-waifuplsstest.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -160,11 +185,11 @@
         <a
           href="https://buhankoanon-not-troon-club.hf.space/?__theme=light"
           target="_blank"
-          >11. Troon Club - a Hugging Face Space by Buhankoanon</a
+          >12. Troon Club - a Hugging Face Space by Buhankoanon</a
         >
       </h3>
       <iframe
-        id="iframe11"
+        id="iframe12"
         src="https://buhankoanon-not-troon-club.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -173,11 +198,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://ikenga-proxy1.hf.space/?__theme=light" target="_blank"
-          >12. Proxy - a Hugging Face Space by ikenga</a
+          >13. Proxy - a Hugging Face Space by ikenga</a
         >
       </h3>
       <iframe
-        id="iframe12"
+        id="iframe13"
         src="https://ikenga-proxy1.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -188,11 +213,11 @@
         <a
           href="https://yukianon-alien-research.hf.space/?__theme=light"
           target="_blank"
-          >13. Alien Research - a Hugging Face Space by yukianon</a
+          >14. Alien Research - a Hugging Face Space by yukianon</a
         >
       </h3>
       <iframe
-        id="iframe13"
+        id="iframe14"
         src="https://yukianon-alien-research.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -203,11 +228,11 @@
         <a
           href="https://undyingrageblade-closedainasdwfdsag.hf.space/?__theme=light"
           target="_blank"
-          >14. ClosedAinasdwfdsag - a Hugging Face Space by UndyingRageblade</a
+          >15. ClosedAinasdwfdsag - a Hugging Face Space by UndyingRageblade</a
         >
       </h3>
       <iframe
-        id="iframe14"
+        id="iframe15"
         src="https://undyingrageblade-closedainasdwfdsag.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -218,11 +243,11 @@
         <a
           href="https://mmoose-gptmoose.hf.space/?__theme=light"
           target="_blank"
-          >15. GPTMoose - a Hugging Face Space by MMoose</a
+          >16. GPTMoose - a Hugging Face Space by MMoose</a
         >
       </h3>
       <iframe
-        id="iframe15"
+        id="iframe16"
         src="https://mmoose-gptmoose.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -233,11 +258,11 @@
         <a
           href="https://kftrasher-walter.hf.space/?__theme=light"
           target="_blank"
-          >16. FreedomUnit - a Hugging Face Space by KFTrasher</a
+          >17. FreedomUnit - a Hugging Face Space by KFTrasher</a
         >
       </h3>
       <iframe
-        id="iframe16"
+        id="iframe17"
         src="https://kftrasher-walter.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -248,11 +273,11 @@
         <a
           href="https://bloodstain-broken-image.hf.space/?__theme=light"
           target="_blank"
-          >17. Broken Image - a Hugging Face Space by bloodstain</a
+          >18. Broken Image - a Hugging Face Space by bloodstain</a
         >
       </h3>
       <iframe
-        id="iframe17"
+        id="iframe18"
         src="https://bloodstain-broken-image.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -263,11 +288,11 @@
         <a
           href="https://krazyxki-v-1488abed.hf.space/?__theme=light"
           target="_blank"
-          >18. 2ch-reverse-proxy - a Hugging Face Space by krazyxki</a
+          >19. 2ch-reverse-proxy - a Hugging Face Space by krazyxki</a
         >
       </h3>
       <iframe
-        id="iframe18"
+        id="iframe19"
         src="https://krazyxki-v-1488abed.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -278,11 +303,11 @@
         <a
           href="https://ahhh082222222-23wefs.hf.space/?__theme=light"
           target="_blank"
-          >19. 23wefs - a Hugging Face Space by ahhh082222222</a
+          >20. 23wefs - a Hugging Face Space by ahhh082222222</a
         >
       </h3>
       <iframe
-        id="iframe19"
+        id="iframe20"
         src="https://ahhh082222222-23wefs.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -293,11 +318,11 @@
         <a
           href="https://raelfromgenesis-calmreasonablegarden.hf.space/?__theme=light"
           target="_blank"
-          >20. Calmreasonablegarden - a Hugging Face Space by raelfromgenesis</a
+          >21. Calmreasonablegarden - a Hugging Face Space by raelfromgenesis</a
         >
       </h3>
       <iframe
-        id="iframe20"
+        id="iframe21"
         src="https://raelfromgenesis-calmreasonablegarden.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -308,11 +333,11 @@
         <a
           href="https://yukianon-literary-club.hf.space/?__theme=light"
           target="_blank"
-          >21. Alien Research - a Hugging Face Space by yukianon</a
+          >22. Alien Research - a Hugging Face Space by yukianon</a
         >
       </h3>
       <iframe
-        id="iframe21"
+        id="iframe22"
         src="https://yukianon-literary-club.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -323,11 +348,11 @@
         <a
           href="https://coomainc-victory-z.hf.space/?__theme=light"
           target="_blank"
-          >22. Victory Z - a Hugging Face Space by coomAInc</a
+          >23. Victory Z - a Hugging Face Space by coomAInc</a
         >
       </h3>
       <iframe
-        id="iframe22"
+        id="iframe23"
         src="https://coomainc-victory-z.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -338,11 +363,11 @@
         <a
           href="https://lee-myo-biyanna.hf.space/?__theme=light"
           target="_blank"
-          >23. Biyanna - a Hugging Face Space by LEE-MYO</a
+          >24. Biyanna - a Hugging Face Space by LEE-MYO</a
         >
       </h3>
       <iframe
-        id="iframe23"
+        id="iframe24"
         src="https://lee-myo-biyanna.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -353,11 +378,11 @@
         <a
           href="https://idosal-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >24. oai-reverse-proxy - a Hugging Face Space by idosal</a
+          >25. oai-reverse-proxy - a Hugging Face Space by idosal</a
         >
       </h3>
       <iframe
-        id="iframe24"
+        id="iframe25"
         src="https://idosal-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -368,11 +393,11 @@
         <a
           href="https://mysteryman63453121-schizophrenia.hf.space/?__theme=light"
           target="_blank"
-          >25. Schizophrenia - a Hugging Face Space by mysteryman63453121</a
+          >26. Schizophrenia - a Hugging Face Space by mysteryman63453121</a
         >
       </h3>
       <iframe
-        id="iframe25"
+        id="iframe26"
         src="https://mysteryman63453121-schizophrenia.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -383,11 +408,11 @@
         <a
           href="https://nocars-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >26. Oai Proxy - a Hugging Face Space by nocars</a
+          >27. Oai Proxy - a Hugging Face Space by nocars</a
         >
       </h3>
       <iframe
-        id="iframe26"
+        id="iframe27"
         src="https://nocars-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -396,11 +421,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://gkswk-gwon.hf.space/?__theme=light" target="_blank"
-          >27. Gwon - a Hugging Face Space by gkswk</a
+          >27. 28. Gwon - a Hugging Face Space by gkswk</a
         >
       </h3>
       <iframe
-        id="iframe27"
+        id="iframe28"
         src="https://gkswk-gwon.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -411,12 +436,12 @@
         <a
           href="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
           target="_blank"
-          >28. Loversweetheartsweetiemistresssweetylass - a Hugging Face Space
+          >29. Loversweetheartsweetiemistresssweetylass - a Hugging Face Space
           by chaeyo</a
         >
       </h3>
       <iframe
-        id="iframe28"
+        id="iframe29"
         src="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -425,11 +450,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
-          >29. Archlive - a Hugging Face Space by QsIQ</a
+          >30. Archlive - a Hugging Face Space by QsIQ</a
         >
       </h3>
       <iframe
-        id="iframe29"
+        id="iframe30"
         src="https://qsiq-archlive.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -442,7 +467,7 @@
       <tr>
         <td style="text-align: center; font-size: 14px">
           If you dont want your proxy to be shared, send me an email.
-          navigatethecoom@proton.me
+          navigatethecoom at proton.me
         </td>
       </tr>
     </table>
@@ -561,6 +586,10 @@
       };
       var iframe29 = document.getElementById("iframe29");
       iframe29.contentWindow.document.open = function () {
+        return null;
+      };
+      var iframe30 = document.getElementById("iframe30");
+      iframe30.contentWindow.document.open = function () {
         return null;
       };
     </script>
