Remove Schizophrenia, update numbering

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 16 May, Revision 4)</title>
+    <title>CHECKER (Update: 17 May, Revision 1)</title>
   </head>
 
   <body>
@@ -391,28 +391,13 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://mysteryman63453121-schizophrenia.hf.space/?__theme=light"
+          href="https://nocars-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >26. Schizophrenia - a Hugging Face Space by mysteryman63453121</a
+          >26. Oai Proxy - a Hugging Face Space by nocars</a
         >
       </h3>
       <iframe
         id="iframe26"
-        src="https://mysteryman63453121-schizophrenia.hf.space/?__theme=light"
-        width="100%"
-        height="500"
-        allow="encrypted-media"
-        sandbox
-      ></iframe>
-      <h3 style="text-align: center">
-        <a
-          href="https://nocars-oai-proxy.hf.space/?__theme=light"
-          target="_blank"
-          >27. Oai Proxy - a Hugging Face Space by nocars</a
-        >
-      </h3>
-      <iframe
-        id="iframe27"
         src="https://nocars-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -421,11 +406,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://gkswk-gwon.hf.space/?__theme=light" target="_blank"
-          >27. 28. Gwon - a Hugging Face Space by gkswk</a
+          >27. Gwon - a Hugging Face Space by gkswk</a
         >
       </h3>
       <iframe
-        id="iframe28"
+        id="iframe27"
         src="https://gkswk-gwon.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -436,12 +421,12 @@
         <a
           href="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
           target="_blank"
-          >29. Loversweetheartsweetiemistresssweetylass - a Hugging Face Space
+          >28. Loversweetheartsweetiemistresssweetylass - a Hugging Face Space
           by chaeyo</a
         >
       </h3>
       <iframe
-        id="iframe29"
+        id="iframe28"
         src="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -450,11 +435,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
-          >30. Archlive - a Hugging Face Space by QsIQ</a
+          >29. Archlive - a Hugging Face Space by QsIQ</a
         >
       </h3>
       <iframe
-        id="iframe30"
+        id="iframe29"
         src="https://qsiq-archlive.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -586,10 +571,6 @@
       };
       var iframe29 = document.getElementById("iframe29");
       iframe29.contentWindow.document.open = function () {
-        return null;
-      };
-      var iframe30 = document.getElementById("iframe30");
-      iframe30.contentWindow.document.open = function () {
         return null;
       };
     </script>
