--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHECKER (Update: 17 May, Revision 1)</title>
+    <style>
+      body {
+        background-color: #e0e0e0;
+      }
+    </style>
   </head>
 
   <body>
