remove the extra part of url

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://mysteryman63453121-hope.hf.space/?__theme=light/?__theme=light"
+          href="https://mysteryman63453121-hope.hf.space/?__theme=light"
           target="_blank"
           >3. Hope - a Hugging Face Space by mysteryman63453121</a
         >
       </h3>
       <iframe
         id="iframe3"
-        src="https://mysteryman63453121-hope.hf.space/?__theme=light/?__theme=light"
+        src="https://mysteryman63453121-hope.hf.space/?__theme=light"
         width="100%"
         height="500"
         allow="encrypted-media"
