Update to add thank you message

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         target="_blank"
         >the original one</a
       >,<br />so use them with a clear understanding of the risks and the fact
-      that they may be logged.
+      that they may be logged.<br /><br />
+      Note that this site is based on worldsoupkitchen created by gook dev. Thank you to him and to alwaysfindtheway <3.
     </h5>
     <br />
     <div id="bowl">
