--- a/index.html
+++ b/index.html
@@ -556,6 +556,10 @@
       iframe27.contentWindow.document.open = function () {
         return null;
       };
+      var iframe28 = document.getElementById("iframe28");
+      iframe27.contentWindow.document.open = function () {
+        return null;
+      };
     </script>
   </body>
 </html>
