--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 23 May, Revision 1)</title>
+    <title>CHECKER (Update: 01 June, Revision 1)</title>
     <style>
       body {
         background-color: #e0e0e0;
@@ -26,7 +26,7 @@
       Thank you to him and to alwaysfindtheway <3.
     </h5>
     <br />
-    <div id="bowl">
+    <div id="block">
       <h3 style="text-align: center">
         <a
           href="https://branon-oai-proxy.hf.space/?__theme=light"
@@ -410,24 +410,8 @@
         sandbox
       ></iframe>
       <h3 style="text-align: center">
-        <a
-          href="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
-          target="_blank"
-          >27. Loversweetheartsweetiemistresssweetylass - a Hugging Face Space
-          by chaeyo
-        </a>
-      </h3>
-      <iframe
-        id="iframe27"
-        src="https://chaeyo-loversweetheartsweetiemistresssweetylass.hf.space/?__theme=light"
-        width="100%"
-        height="500"
-        allow="encrypted-media"
-        sandbox
-      ></iframe>
-      <h3 style="text-align: center">
         <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
-          >28. Archlive - a Hugging Face Space by QsIQ
+          >27. Archlive - a Hugging Face Space by QsIQ
         </a>
       </h3>
       <iframe
@@ -554,10 +538,6 @@
         return null;
       };
       var iframe27 = document.getElementById("iframe27");
-      iframe27.contentWindow.document.open = function () {
-        return null;
-      };
-      var iframe28 = document.getElementById("iframe28");
       iframe27.contentWindow.document.open = function () {
         return null;
       };
