--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 06 June, Revision 1)</title>
+    <title>CHECKER (Update: 08 June, Revision 1)</title>
     <style>
       body {
         background-color: #e0e0e0;
@@ -74,14 +74,14 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://nanomachin-free-palestine.hf.space/?__theme=light"
+          href="https://mysteryman63453121-whocars.hf.space/?__theme=light"
           target="_blank"
-          >4. Free Palestine - a Hugging Face Space by nanomachin
+          >4. Whocars - a Hugging Face Space by mysteryman63453121
         </a>
       </h3>
       <iframe
         id="iframe4"
-        src="https://nanomachin-free-palestine.hf.space/?__theme=light"
+        src="https://mysteryman63453121-whocars.hf.space/?__theme=light"
         width="100%"
         height="500"
         allow="encrypted-media"
