--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       <tr>
         <td style="text-align: center; font-size: 14px">
           If you dont want your proxy to be shared, send me an email.
-          navigatethecoom at proton.me
+          navigatecoom at proton.me
         </td>
       </tr>
     </table>
